kske klar layout t startsidan

--- a/index.html
+++ b/index.html
@@ -41,15 +41,18 @@
         <article>
 
             <div class="box">
-
+                <img src="" alt="" />
+                <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
+            </div>
+            
+            <div class="box">
+                <img src="" alt="" />
+                <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
             </div>
 
             <div class="box">
-
-            </div>
-
-            <div class="box">
-
+                <img src="" alt="" />
+                <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
             </div>
 
         </article>
