--- a/sida1.html
+++ b/sida1.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
-    <link rel="StyleSheet" href="index.css">
+    <title>Document</title>
 </head>
 <body>
     
@@ -46,20 +45,7 @@
 
         <article>
 
-            <div class="box">
-                <img src="" alt="" />
-                <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
-            </div>
             
-            <div class="box">
-                <img src="" alt="" />
-                <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
-            </div>
-
-            <div class="box">
-                <img src="" alt="" />
-                <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
-            </div>
 
         </article>
     </container>
