fixat med bilder, färger, layout

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="head">
 
             <div class="logga">
-
+                <img src="bilder/redigerad_logga_klarna.png" />
             </div>
 
             <header>
@@ -47,17 +47,17 @@
         <article>
 
             <div class="box">
-                <img src="" alt="" />
+                <img src="bilder/akrylnaglar-design1.jpg" />
                 <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
             </div>
             
             <div class="box">
-                <img src="" alt="" />
+                <img src="bilder/pedikyr.jpg" />
                 <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
             </div>
 
             <div class="box">
-                <img src="" alt="" />
+                <img src="bilder/lashlift1.jpg" />
                 <p>tjosan hej hopp hej hopp snsjdghjkdfhgsjkfhdjgfkgukfgh</p>
             </div>
 
