--- a/sida1.html
+++ b/sida1.html
@@ -19,7 +19,7 @@
 
             <header>
                 <h1>
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/index.html">Matcha din inre skönhet!</a>
+                    <a href="index.html">Matcha din inre skönhet!</a>
                 </h1>
             </header>
 
@@ -29,19 +29,19 @@
             
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida1.html">Produkterna</a>
+                    <a href="sida1.html">Produkterna</a>
                 </p>
             </div>
 
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida2.html">Om företaget</a>
+                    <a href="sida2.html">Om företaget</a>
                 </p>
             </div>
 
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida%203.html">Bokningar</a>
+                    <a href="sida3.html">Bokningar</a>
                 </p>
             </div>
 
@@ -65,7 +65,42 @@
             </div> -->
 
             <div class="container text-center">
-                <div class="row">
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>                    
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="bilder/akrylnaglar-design1.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="bilder/pedikyr2.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="bilder/akrylnaglar-design2.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="bilder/lashlift3.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="bilder/pedikyr3.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                
+                <!-- <div class="row">
                   <div class="col">
                     <img src="bilder/lashlift3.jpg" class="img-fluid rounded-start" alt="...">
                   </div>
@@ -88,19 +123,20 @@
 
                     <img src="bilder/akrylnaglar-design2.jpg" class="img-fluid rounded-start" alt="...">
                   </div>
-                </div>
+                </div> -->
               </div>
 
             </div>
 
-        <footer>
-            <p class="footer-p">Telefon: 123 456 78 90</p>
-            <p class="footer-p">Mail: beauty.shop@foretag.com</p>
-            <p class="footer-p">Adress: Företagsgatan 1</p>
-        </footer>
+            <footer>
+                <button onclick="myFunktion()" class="footer-p">Telefon: 123 456 78 90</button>
+                <button onclick="myFunktion()" class="footer-p">Mail: beauty.shop@foretag.com</button>
+                <button onclick="myFunktion()" class="footer-p">Adress: Företagsgatan 1</button>
+            </footer>
 
     </container>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
