--- a/sida2.html
+++ b/sida2.html
@@ -19,7 +19,7 @@
 
             <header>
                 <h1>
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/index.html">Matcha din inre skönhet!</a>
+                    <a href="index.html">Matcha din inre skönhet!</a>
                 </h1>
             </header>
 
@@ -29,19 +29,19 @@
             
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida1.html">Produkterna</a>
+                    <a href="sida1.html">Produkterna</a>
                 </p>
             </div>
 
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida2.html">Om företaget</a>
+                    <a href="sida2.html">Om företaget</a>
                 </p>
             </div>
 
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida%203.html">Bokningar</a>
+                    <a href="sida3.html">Bokningar</a>
                 </p>
             </div>
 
@@ -67,13 +67,14 @@
         </article>
 
         <footer>
-            <p class="footer-p">Telefon: 123 456 78 90</p>
-            <p class="footer-p">Mail: beauty.shop@foretag.com</p>
-            <p class="footer-p">Adress: Företagsgatan 1</p>
+            <button onclick="myFunktion()" class="footer-p">Telefon: 123 456 78 90</button>
+            <button onclick="myFunktion()" class="footer-p">Mail: beauty.shop@foretag.com</button>
+            <button onclick="myFunktion()" class="footer-p">Adress: Företagsgatan 1</button>
         </footer>
 
     </container>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
