--- a/sida3.html
+++ b/sida3.html
@@ -19,7 +19,7 @@
 
             <header>
                 <h1>
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/index.html">Matcha din inre skönhet!</a>
+                    <a href="index.html">Matcha din inre skönhet!</a>
                 </h1>
             </header>
 
@@ -29,45 +29,26 @@
             
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida1.html">Produkterna</a>
+                    <a href="sida1.html">Produkterna</a>
                 </p>
             </div>
 
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida2.html">Om företaget</a>
+                    <a href="sida2.html">Om företaget</a>
                 </p>
             </div>
 
             <div class="knapp">
                 <p class="knapp-p">
-                    <a href="file:///C:/Users/0411loel/Documents/GitHub/slutprojekt-webb2/sida%203.html">Bokningar</a>
+                    <a href="sida3.html">Bokningar</a>
                 </p>
             </div>
 
         </nav>
 
         <div class="sida3-box">
-
-            <!-- <div class="box">
-                <img src="bilder/akrylnaglar-design1.jpg" class="card-img-top" alt="...">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            
-            <div class="box">
-                <img src="bilder/pedikyr.jpg" class="card-img-top" alt="...">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-
-            <div class="box">
-                <img src="bilder/lashlift1.jpg" class="card-img-top" alt="...">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div> -->
-
-
-
-
-            <div class="card mb-3" style="max-width: 540px; float: left;">
+            <div class="card mb-3">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="bilder/akrylnaglar-design2.jpg" class="img-fluid rounded-start" alt="...">
@@ -81,15 +62,21 @@
                 </div>
               </div>
 
-              <div class="card" style="width: 14rem; float: right;">
-                <img src="bilder/pedikyr2.jpg" class="img-fluid rounded-start" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Pedikyr</h5>
-                  <p class="card-text">Vår pedikyr är en behandlig för fot och tånaglar där du kommer att få både fotmasage och trimade fixade tånaglar, där akrylnaglar är ett valbart alternativ.</p>
+              <div class="card mb-3">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="bilder/pedikyr2.jpg" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Lashlift</h5>
+                      <p class="card-text">Lashlift är en behandlig vi gör för att färga och förlänga dina ögonfransar och där med förstärka konturena runt ögonen.</p>
+                    </div>
+                  </div>
                 </div>
               </div>
 
-              <div class="card mb-3" style="max-width: 540px; float: left;">
+              <div class="card mb-3">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="bilder/lashlift2.jpg" class="img-fluid rounded-start" alt="...">
@@ -103,7 +90,7 @@
                 </div>
               </div>
 
-              <!-- <div class="card mb-3" style="max-width: 540px;">
+              <!-- <div class="card mb-3" ">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="bilder/lashlift2.jpg" class="img-fluid rounded-start" alt="...">
@@ -120,14 +107,15 @@
 
             </div>
 
-        <footer>
-            <p class="footer-p">Telefon: 123 456 78 90</p>
-            <p class="footer-p">Mail: beauty.shop@foretag.com</p>
-            <p class="footer-p">Adress: Företagsgatan 1</p>
-        </footer>
+            <footer>
+              <button onclick="myFunktion()" class="footer-p">Telefon: 123 456 78 90</button>
+              <button onclick="myFunktion()" class="footer-p">Mail: beauty.shop@foretag.com</button>
+              <button onclick="myFunktion()" class="footer-p">Adress: Företagsgatan 1</button>
+          </footer>
 
     </container>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
