--- a/kladd.html
+++ b/kladd.html
@@ -15,15 +15,17 @@
 
     <p style="width: 50px; height: 20px; background-color: #089cff">1</p>
     <p style="width: 50px; height: 20px; background-color: #5ca6ff">2</p>
-    <p style="width: 50px; height: 20px; background-color: #beb2f9">3</p>
+    <p style="width: 250px; height: 50px; background-color: #beb2f9">3</p> dis
     <p style="width: 50px; height: 20px; background-color: #fecaf8">4</p>
-    <p style="width: 50px; height: 20px; background-color: #ffe4f4">5</p>
+    <p style="width: 250px; height: 50px; background-color: #ffe4f4">5</p> dis
 
     <p style="width: 50px; height: 20px; background-color: #622f37">1</p>
     <p style="width: 50px; height: 20px; background-color: #824241">2</p>
-    <p style="width: 50px; height: 20px; background-color: #b1635b">3</p>
+    <p style="width: 250px; height: 50px; background-color: #b1635b">3</p> dis 
     <p style="width: 50px; height: 20px; background-color: #ef8e7a">4</p>
     <p style="width: 50px; height: 20px; background-color: #f4c494">5</p>
+
+    <p style="width: 250px; height: 50px; background-color: lightcoral">3</p> dis
 
     <!-- <p style="width: 50px; height: 20px; background-color: ">1</p>
     <p style="width: 50px; height: 20px; background-color: ">2</p>
